# fred-mod-eppd

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  COMPAT  ChangeLog  ChangeLog.rst  Makefile  Makefile.am  Makefile.in  NOTES  README  README.rst  TODO  aclocal.m4  am_doxygen.am  config.h.cmake  config.h.in  configure  configure.ac  corba_dummy.c  create.xml  delete.xml  dependencies.txt  doxy.conf  doxy.conf.in  epp-client.c  epp-client.h  epp-client_stub.c  epp_common.c  epp_common.h  epp_corba.c  epp_corba.h  epp_data.h  epp_gen.c  epp_gen.h  epp_parser.c  epp_parser.h  (+25 more)
cmake/: FindDoxygen.cmake
conf/: 02-fred-mod-eppd-apache.conf  02-fred-mod-eppd-apache.conf.in  fred-mod-eppd-apache.conf.in
contrib/fedora/: Makefile  fred-mod-eppd.spec
doc/: mainpage.h  mod_eppd.fig
examples/: big_contact_check.xml  check-schema  check_contact.xml  check_domain.xml  check_keyset.xml  check_nsset.xml  create_contact1.xml  create_contact2.xml  create_contact3.xml  create_contact_extra_addr.xml  create_contact_test.xml  create_contact_utf8.xml  create_domain.xml  create_domain_enum.xml  create_domain_keyset.xml  create_domain_secdns.xml  create_keyset.xml  create_nsset.xml  creditInfo.xml  delete_contact.xml  delete_contact1.xml  delete_contact2.xml  delete_contact3.xml  delete_contact_extra_addr.xml  delete_domain.xml  delete_domain_enum.xml  delete_keyset.xml  delete_nsset.xml  error.xml  info_contact.xml  info_contact_extra_addr.response.xml  info_contact_extra_addr.xml  info_domain.xml  info_domain_enum.xml  info_domainsByContact.xml  info_domainsByKeyset.xml  info_domainsByNsset.xml  info_getResults.xml  info_keyset.xml  info_keysetsByContact.xml  (+41 more)
m4/: ax_orbit_cosnaming.m4  ax_with_apxs.m4
schemas/: CHANGELOG.rst  ChangeLog  README  all-1.0.xsd  all-1.1.xsd  all-1.2.xsd  all-1.3.xsd  all-1.4.xsd  all-2.0.xsd  all-2.1.xsd  all-2.2.xsd  all-2.3.1.xsd  all-2.3.2.xsd  all-2.3.xsd  all-2.4.0.xsd  all.xsd  contact-1.0.xsd  contact-1.1.xsd  contact-1.2.xsd  contact-1.3.xsd  contact-1.4.xsd  contact-1.5.xsd  contact-1.6.1.xsd  contact-1.6.2.xsd  contact-1.6.xsd  contactext-1.0.xsd  domain-1.0.xsd  domain-1.1.xsd  domain-1.2.xsd  domain-1.3.xsd  domain-1.4.1.xsd  domain-1.4.xsd  enumval-1.0.xsd  enumval-1.1.xsd  enumval-1.2.xsd  epp-1.0.xsd  extra-addr-1.0.0.xsd  fred-1.0.xsd  fred-1.1.xsd  fred-1.2.xsd  (+17 more)
scripts/docker/centos:7/: Dockerfile
scripts/docker/fedora:29/: Dockerfile
scripts/docker/fedora:30/: Dockerfile
scripts/docker/fedora:32/: Dockerfile
scripts/docker/fedora:33/: Dockerfile
scripts/docker/fedora:34/: Dockerfile
scripts/docker/fedora:35/: Dockerfile
scripts/docker/fedora:rawhide/: Dockerfile
scripts/docker/ubuntu:16.04/: Dockerfile
scripts/docker/ubuntu:20.04/: Dockerfile
ssl/: README
test/: client.crt
testdir/: client.csr  epptelnet.pl  test.sh
